# coffee_machine_kata

./: Dockerfile  Makefile  README.md  docker-compose.yaml  drink_maker.py  pyproject.toml  requirements.txt  setup.py
coffee_machine/: coffee_machine.py  customer_order.py  drink.py  drink_maker_protocol.py  sugar_quantity.py
coffee_machine/delivery/: app.py
src/coffee_machine/: coffee_machine.py  credit_checker.py  customer_order.py  drink.py  order_logic.py  sugar_quantity.py
tests/: test_coffee_machine.py  test_credit_checker.py  test_customer_order.py  test_drink.py  test_drink_maker_protocol.py  test_order_logic.py  test_sugar_quantity.py
