[tool.poetry]
name = "coffee_machine_kata"
version = "0.1.0"
description = ""
authors = ["Carlos Loredo <carlcamusa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
doublex = {git = "https://github.com/davidvilla/python-doublex.git", rev = "8626e431afbbc473c7ed51203fe9a9fd94578662"}
expects = "^0.9.0"
doublex-expects = "^0.7.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
